--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -14,5 +14,7 @@
 // }
 
 @mixin lg {
-    @media screen and (min-width: 800px){}
+    @media screen and (min-width: 800px){
+        @content
+    }
 }
